cluster/manifests/utilities/memcached/stateful_set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: memcached
spec:
  serviceName: memcached
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels: &labels
      app.kubernetes.io/component: memcached
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: memcached
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsUser: 65532
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          image: memcached
          imagePullPolicy: IfNotPresent
          args:
            - memcached
            - -C
            - -m
            - $(MEMORY_REQUESTS)M
            - -I
            - 32m
            - -c
            - "10240"
            - -t
            - "4"
            - -R
            - "100"
          ports:
            - name: tcp
              containerPort: 11211
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: tcp
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 3
            failureThreshold: 1
            timeoutSeconds: 5
        - name: exporter
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsUser: 65532
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          image: quay.io/prometheus/memcached-exporter
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 9150
              protocol: TCP
