cluster/manifests/utilities/memcached/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memcached
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/component: memcached
  ports:
    - name: tcp
      port: 11211
      protocol: TCP
      targetPort: tcp
---
apiVersion: v1
kind: Service
metadata:
  name: mcrouter
spec:
  selector:
    app.kubernetes.io/component: mcrouter
  ports:
    - name: tcp
      port: 5000
      protocol: TCP
      targetPort: tcp
