cluster/manifests/utilities/memcached/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  # kustomize does not support NetworkPolicy ingress merge
  name: memcached-peer
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: memcached
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: mcrouter
      ports:
        - protocol: TCP
          port: 11211
